--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/apiCursos
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:31192/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=P@ssword
+spring.datasource.password=gGAAeHabgggE23-E3HHBaAbH6h5-gff-
 
 
 spring.jpa.database=mysql
@@ -11,4 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
+
+
 
